<resources>
    <string name="app_name">MyGroceryList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_grocery">Enter Grocery</string>
    <string name="hint_item">Enter Grocery Item</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
