<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_popup">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_grocery"/>

            <EditText
                android:id="@+id/edit_groceryItem"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item"/>

            <EditText
                android:id="@+id/groceryQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_groceryItem"
                android:layout_marginTop="15dp"
                android:hint="@string/quantity"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/groceryQty"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>


            
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>