<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:paddingTop="5dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no_button"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:layout_below="@id/text_alert"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="19dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes_button"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:layout_below="@id/text_alert"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="19dp"
                android:layout_alignBottom="@id/no_button"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>